--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
   "main": "index.js",
   "repository": "git@github.com:trivikr/test-whatwg-fetch-karma.git",
   "author": "Kamat, Trivikram <trivikr.dev@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "yarn@3.5.1"
 }
