--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "repository": "git@github.com:trivikr/test-whatwg-fetch-karma.git",
   "author": "Kamat, Trivikram <trivikr.dev@gmail.com>",
   "license": "MIT",
-  "packageManager": "yarn@3.5.1"
+  "packageManager": "yarn@3.5.1",
+  "devDependencies": {
+    "@tsconfig/node14": "^1.0.3",
+    "@types/node": "^20.1.7",
+    "typescript": "^5.0.4"
+  }
 }
