--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "test-whatwg-fetch-karma",
   "version": "0.0.1",
   "main": "index.js",
+  "scripts": {
+    "test": "karma start karma.conf.js"
+  },
   "repository": "git@github.com:trivikr/test-whatwg-fetch-karma.git",
   "author": "Kamat, Trivikram <trivikr.dev@gmail.com>",
   "license": "MIT",
