--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tsconfig/node14": "^1.0.3",
     "@types/node": "^20.1.7",
     "karma": "^6.4.2",
+    "karma-jasmine": "^5.1.0",
     "karma-typescript": "^5.5.4",
     "msw": "^1.2.1",
     "typescript": "^5.0.4"
