--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-typescript": "^5.5.4",
     "msw": "^1.2.1",
+    "puppeteer": "^20.2.1",
     "typescript": "^5.0.4"
   }
 }
