--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "packageManager": "yarn@3.5.1",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.3",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.1.7",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
