--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "packageManager": "yarn@3.5.1",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.3",
-    "@types/mocha": "^10.0.1",
+    "@types/jasmine": "^4.3.1",
     "@types/node": "^20.1.7",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-typescript": "^5.5.4",
-    "msw": "^1.2.1",
+    "msw": "0.49.2",
     "puppeteer": "^20.2.1",
     "typescript": "^5.0.4"
   }
