--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "msw": "0.49.2",
     "puppeteer": "^20.2.1",
     "typescript": "^5.0.4"
+  },
+  "msw": {
+    "workerDirectory": "src/__mocks__"
   }
 }
