--- a/.github/workflows/chrome_v112.yml
+++ b/.github/workflows/chrome_v112.yml
@@ -18,6 +18,9 @@ jobs:
           # Closest available commit position to official v112 from From https://chromiumdash.appspot.com/releases?platform=Linux
           # Verified from logs that this is Chromium 112.0.5615.0
           chrome-version: "1109220"
-      - run: $CHROME_BIN --version
+        id: setup-chrome
+      - name: Set up CHROME_BIN
+        run: export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
+          $CHROME_BIN --version
       - run: yarn
       - run: yarn test
