--- a/.github/workflows/chrome_v113.yml
+++ b/.github/workflows/chrome_v113.yml
@@ -18,5 +18,10 @@ jobs:
           # Closest available commit position to official v113 from From https://chromiumdash.appspot.com/releases?platform=Linux
           # Verified from logs that this is Chromium 113.0.5672.0
           chrome-version: "1121461"
+        id: setup-chrome
+      - name: Set up CHROME_BIN
+        run: |
+          export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
+          $CHROME_BIN --version
       - run: yarn
       - run: yarn test
