--- a/.github/workflows/chrome_v113.yml
+++ b/.github/workflows/chrome_v113.yml
@@ -19,9 +19,8 @@ jobs:
           # Verified from logs that this is Chromium 113.0.5672.0
           chrome-version: "1121461"
         id: setup-chrome
-      - name: Set up CHROME_BIN
-        run: |
+      - run: yarn
+      - run: |
           export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
           $CHROME_BIN --version
-      - run: yarn
-      - run: yarn test
+          yarn test
