--- a/.github/workflows/chrome_v112.yml
+++ b/.github/workflows/chrome_v112.yml
@@ -20,7 +20,8 @@ jobs:
           chrome-version: "1109220"
         id: setup-chrome
       - run: yarn
-      - run: |
+      - name: test
+        run: |
           export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
           $CHROME_BIN --version
           yarn test
