--- a/.github/workflows/chrome_v113.yml
+++ b/.github/workflows/chrome_v113.yml
@@ -22,6 +22,6 @@ jobs:
       - run: yarn
       - name: test
         run: |
-          export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
-          $CHROME_BIN --version
+          export CHROMIUM_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
+          $CHROMIUM_BIN --version
           yarn test
