--- a/.github/workflows/chrome_v113.yml
+++ b/.github/workflows/chrome_v113.yml
@@ -1,27 +1,13 @@
-name: chrome_v113
+name: chrome_v112
 
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          cache: "yarn"
-      - uses: browser-actions/setup-chromium@v1
-        with:
-          # Closest available commit position to official v113 from From https://chromiumdash.appspot.com/releases?platform=Linux
-          # Verified from logs that this is Chromium 113.0.5672.0
-          chrome-version: "1121461"
-        id: setup-chrome
-      - run: yarn
-      - name: test
-        run: |
-          export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
-          $CHROME_BIN --version
-          yarn test
+  test:
+    uses: ./.github/workflows/chrome.yml
+    with:
+      # Closest available commit position to official v113 from From https://chromiumdash.appspot.com/releases?platform=Linux
+      # Verified from logs that this is Chromium 113.0.5672.0
+      chrome-version: "1121461"
