chore(ci): attempt to install Chrome using .deb files

--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -16,13 +16,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           cache: "yarn"
-      - uses: browser-actions/setup-chromium@v1
-        with:
-          chrome-version: ${{ inputs.chrome-version }}
-        id: setup-chrome
       - run: yarn
       - name: test
         run: |
-          export CHROME_BIN=${{ steps.setup-chrome.outputs.chrome-path }}
-          $CHROME_BIN --version
+          wget --no-verbose -O /tmp/chrome.deb https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_${{ inputs.chrome-version }}-1_amd64.deb \
+            && apt install -y /tmp/chrome.deb \
+            && rm /tmp/chrome.deb
           yarn test
