--- a/.github/workflows/chrome_v113.0.5672.63.yml
+++ b/.github/workflows/chrome_v113.0.5672.63.yml
@@ -8,6 +8,4 @@ jobs:
   test:
     uses: ./.github/workflows/chrome.yml
     with:
-      # Closest available commit position to official v112 from From https://chromiumdash.appspot.com/releases?platform=Linux
-      # Verified from logs that this is Chromium 112.0.5615.0
-      chrome-version: "1109220"
+      chrome-version: "113.0.5672.63"
