--- a/.github/workflows/chrome_v113.0.5672.92.yml
+++ b/.github/workflows/chrome_v113.0.5672.92.yml
@@ -8,6 +8,4 @@ jobs:
   test:
     uses: ./.github/workflows/chrome.yml
     with:
-      # From https://chromiumdash.appspot.com/releases?platform=Linux
-      # Verified from logs that this is Chromium 113.0.5672.0
-      chrome-version: "1121454"
+      chrome-version: "113.0.5672.92"
