fix(ci): attempt installing linux with sudo

--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -20,6 +20,6 @@ jobs:
       - name: test
         run: |
           wget --no-verbose -O /tmp/chrome.deb https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_${{ inputs.chrome-version }}-1_amd64.deb \
-            && apt install -y /tmp/chrome.deb \
+            && sudo apt install -y /tmp/chrome.deb \
             && rm /tmp/chrome.deb
           yarn test
