--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "msw": "0.49.2",
     "playwright": "^1.33.0",
     "typescript": "^5.0.4"
+  },
+  "msw": {
+    "workerDirectory": ""
   }
 }
