--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "test-whatwg-fetch-karma",
+  "name": "test-whatwg-fetch",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "test": "karma start karma.conf.js"
   },
-  "repository": "git@github.com:trivikr/test-whatwg-fetch-karma.git",
+  "repository": "git@github.com:trivikr/test-whatwg-fetch.git",
   "author": "Kamat, Trivikram <trivikr.dev@gmail.com>",
   "license": "MIT",
   "packageManager": "yarn@3.5.1",
